--- a/Backtracking/Style.css
+++ b/Backtracking/Style.css
@@ -1,4 +1,4 @@
-code {  font-family: Helvetica, Arial, sans-serif; color: #660000;
+# {  font-family: Helvetica, Arial, sans-serif; color: #660000;
     font-style: normal
  }
 pre {  color: #660000; font-family: Helvetica, Arial, sans-serif
